--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,8 +57,8 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   
-  # assets:
-  #   - assets/images/
+  assets:
+    - assets/images/
   #   - assets/icons/
   
   # fonts:
